--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>juurlink.org</groupId>
     <artifactId>atag-one</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <dependencies>
 
@@ -27,12 +27,14 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- JSR-308 @NonNull and @Nullable support. -->
+        <!-- @Nullable and @Nonnull annotation. -->
         <dependency>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>checker-qual</artifactId>
-            <version>1.8.9</version>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.1</version>
+            <!-- No need for the annotations at runtime. -->
             <scope>provided</scope>
+            <!--<scope>compile</scope>-->
         </dependency>
 
         <!-- Test dependencies -->
@@ -77,42 +79,26 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
+                                        <!-- Class to start. -->
                                         <Main-Class>org.juurlink.atagone.AtagOneApp</Main-Class>
+                                        <!-- Add project version and build date to WAR MANIFEST.MF -->
+                                        <applicationVersion>${project.version}</applicationVersion>
+                                        <buildDate>${maven.build.timestamp}</buildDate>
                                     </manifestEntries>
                                 </transformer>
-                                <!--<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
-                                <!--<resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>-->
-                                <!--</transformer>-->
                             </transformers>
                             <artifactSet>
                             </artifactSet>
                             <outputFile>${project.build.directory}/${project.artifactId}.jar</outputFile>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/**</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <!-- a lifecycle phase -->
-                        <!--<phase></phase>-->
-                        <configuration>
-                            <target>
-
-                                <!--
-                                  Place any Ant task here. You can add anything
-                                  you can add between <target> and </target> in a
-                                  build.xml.
-                                -->
-
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -121,7 +107,6 @@
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
                 <version>1.7.8</version>
-
                 <executions>
                     <execution>
                         <id>l4j-clui</id>
