Only ignore 172.29.x range, not 172.x completely. Updated class name of 'NotauthorizedException", now in line with original filename (to prevent further trouble). Fixed #7

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.juurlink</groupId>
     <artifactId>atag-one</artifactId>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>1.3.2</version>
 
     <dependencies>
 
